--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     <p class="text-gray-600">
       <strong>Supervisor:</strong> Ts. Syahrul Nizam bin Junaini
     </p>
+    <p class="text-gray-600 mb-2">
+      <strong>Github Repo: </strong>
+       <a href="https://github.com/LuffyMdh/parkpatrol-fyp/tree/main/src"
+          class="text-blue-600 hover:underline font-medium"
+          target="_blank">
+          ParkPatrol FYP Code
+      </a>
+    </p>
   </div>
 </body>
 </html>
