--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p class="text-gray-600 mb-2">
       <strong>Title:</strong> ParkPatrol: Real-Time Illegal Parking Monitoring
     </p>
-    <p class="text-gray-600">
+    <p class="text-gray-600 mb-2">
       <strong>Supervisor:</strong> Ts. Syahrul Nizam bin Junaini
     </p>
     <p class="text-gray-600 mb-2">
